# codef1tenth

./: joy.yaml  joy_node.yaml
src/AEB/: package.xml  setup.py
src/AEB/AEB/: AEB.py  aeb2.py  multiplexer.py
src/AEB/config/: real.yaml  simulation.yaml
src/AEB/launch/: safe_disparity_extender.py
src/Mapping/: package.xml  setup.cfg  setup.py
src/Mapping/Mapping/: Occupancy_Grid.py  README.md  centerline_extraction.py  custom_slam.py  pose_listener.py  scan_filter.py
src/Mapping/cartographer_config/: real.lua  simulation.lua
src/Mapping/config/: real.yaml  simulation.yaml
src/Mapping/launch/: slam.py
src/Planif/: package.xml  setup.cfg  setup.py
src/Planif/Planif/: A_etoile.py  A_etoile_SLAM.py  map.yaml
src/Planif/README_Notebook_explicatif/: A_etoile.ipynb  lecture_wp.py
src/Simple_algo/: package.xml  setup.cfg  setup.py
src/Simple_algo/Simple_algo/: DisparityExtender.py  README.md  fast_disparity_extender.py  follow_gap_penn.py  loadTopics.py  wall_follow.py  wall_follow_penn.py
src/Simple_algo/config/: real.yaml  simulation.yaml
src/Simple_algo/launch/: fast_disparity_extender.launch.py
src/Waypoints/: package.xml  setup.cfg  setup.py
src/Waypoints/Waypoints/: pure_pursuit.py  pure_pursuit2.py  waypoint_logger_pure_pursuit.py  waypoints.csv  waypoints2.csv
src/custom_msgs/: CMakeLists.txt  package.xml
src/f1tenth_gym_ros/: README.md
src/localisation/: package.xml  setup.py
src/strategy/: package.xml  setup.py
src/timer/: package.xml  setup.cfg  setup.py
src/timer/config/: params.yaml
src/timer/timer/: timer_node.py
(+23 files in other folders)
